fixed text size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -635,13 +635,15 @@ h1 span {
         padding: 1.5rem;
     }
     #sub-headline{
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
     .padding-sm-6{
         padding-top: 6rem;
     }
     .big-button{
-        font-size : 0.6rem;
+        font-size : 0.7rem;
+        padding: 15px 20px;
+        border-radius: 26px;
     }
 }
 
